# worker-test-task

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
apps/workers/: admin.py  filters.py  import_handler.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/workers/migrations/: 0001_initial.py  0002_remove_worker_created_by.py
core/: settings.py  urls.py
templates/registration/: login.html
